--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./2.functions/index.html
+          source: ./2.functions/
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
